# algoc

./: .gitignore  Algo.org  CMakeLists.txt  LICENSE  Makefile  Progress.org  README.org  build.zig  build.zig.zon  main.algo  main.c
generics/: Vector.ts  common.ts  main.ts
include/: Vector.h  arena.h  common.h  lexer.h  string_view.h  tokens.h
src/: AST.zig  Analyser.zig  Compiler.zig  LanguageType.zig  Lexer.zig  Parser.zig  Token.zig  VM.zig  Vector.c  arena.c  common.zig  lexer.c  main.zig  reporter.zig  root.zig  string_veiw.c  tokens.c
src/Parsing/: expression.zig  statement.zig
